
	* arch/arm/src/sam3u/sam3u_pio.c - Fix an address calculation error
	  that caused ports B & C to get mapped to the PIOA base address.
	  This is an important bugfix! (a patch is available)
	* arch/arm/src/lpc313x/lpc313x_boot.c - Fix an error in the vector
	  initialization was causing a memory fault.
	* lib/lib_strtod.c - Add strtod()
	* lpc3131/ea3131 - Several bring fixes submitted by David Hewson.  The
	  lpc3131 is almost there!  Thanks David!
	* arch/arm/src/arm/up_head.S - Corrected backward conditional compilation
	  that selects if vectors are located at 0x0000:0000 or 0xffff:f000.
	  This fixes the last show stopper bug in the lpc313x bring-up.
	* configs/ea3131/nsh - Added a NuttShell (NSH) configuration for the
	  EA3131.

5.3 2010-04-11 Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/lpc313x/lpc313x_usbdev.c - USB driver for the LPC313x
	  contributed by David Hewson.
	* configs/ea3131/src/up_ubstrgc.c, configs/ea3131/usbserial,
	  configs/ea3131/usbstorage - USB storage and USB serial example support
	  contributed by David Hewson.
	* Several important compilation error fixes in lpc313x and (dualspeed) USB
	  code also contributed by David Hewson.
	* arch/arm/src/sam3u/sam3u_dmac.c - DMA support for the AT90SAM3U.
	* arch/arm/src/sam3u/sam3u_hsmci.c - SD memory card support for AT90SAM3U
	  (Neither the DMA nor the HSMCI driver are functional on the initial checkin).
	* drivers/usbdev - Several important fixes to the USB mass storage driver
	  submitted by David Hewson.
	* configs/olimex-lpc2378, arch/arm/include/lpc2378, and arch/arm/src/lpc2378 -
	  Basic port of the NXP 2378 on the Olimex board contributed by
	  Rommel Marcelo.
	* arch/arm/src/sam3u/sam3u_internal.h - Fixed a critical bug in the AT91SAM3U
	  PIO decoding.  No PIOs greater than 15 could be used on any port!  Obviously,
	  no one has been using this port.

5.4 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* include/nuttx/lcd.h - Defines an LCD interface.
