@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: April 14, 2010</p>
+      <p>Last Updated: April 16, 2010</p>
     </td>
   </tr>
 </table>
@@ -1692,6 +1692,7 @@ buildroot-1.8 2009-12-21 &lt;spudmonkey@racsa.co.cr&gt;
 nuttx-5.4 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* include/nuttx/lcd.h - Defines an LCD interface.
+	* graphics/nxglib/fb and lcd - Support LCD and framebuffer rasterizers for NX.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
